fix overlap

--- a/src/components/section-list/style.css
+++ b/src/components/section-list/style.css
@@ -20,15 +20,13 @@
 }
 
 .text {
-  width: 100% - 10px;
+  width: calc(100% - 21px);
   margin: 0;
   padding: 0;
 }
 
 .delete {
   position: absolute;
-  width: 10px;
-  height: 10px;
   top: 5px;
   right: 5px;
 }
